Add JDK13 support